Fix: Address deprecation warnings across modules