@@ -33,10 +33,10 @@ public class ByteToLongConverter implements Converter {
   }
 
   public Object convert(Object o) {
-    return new Long( ((Number)o).longValue() );
+    return Long.valueOf( ((Number)o).longValue() );
   }
 
   public Object revert(Object o) {
-    return new Byte(((Long)o).byteValue());
+    return Byte.valueOf(((Long)o).byteValue());
   }
 }
